[style] patterns fix - swatches should work better on smaller screens - patterns.css should be usable for any post that needs it

--- a/_includes/style/patterns.css
+++ b/_includes/style/patterns.css
@@ -9,7 +9,7 @@
 }
 
 .swatches {
-  font: 400 .75em/1.5 'source-sans-pro', Menlo, Consolas, monospace;
+  font: 400 .625em/1.5 'source-sans-pro', Menlo, Consolas, monospace;
   list-style-type: none;
   overflow: hidden;
 }
@@ -27,7 +27,7 @@
   background-color: hsla(0, 0%, 100%, .8);
   border-bottom: none;
   bottom: 0;
-  padding: .25em;
+  padding: .5em 0;
   position: absolute;
   text-align: center;
   width: 100%;
@@ -38,7 +38,7 @@
   padding: 2em;
 }
 
-@media screen and (min-width: 36em) {
+@media screen and (min-width: 20em) {
   .swatches li {
     float: left;
     width: 50%;
@@ -46,10 +46,6 @@
 }
 
 @media screen and (min-width: 80em) {
-  .swatches {
-    font-size: .625em;
-  }
-
   .swatches li {
     width: 25%;
   }
